--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,19 @@
 [buildout]
 develop = .
-parts = test
+
+# buildout options
+show-picked-versions = true
+newest = false
+download-cache = downloads
 versions = versions
+
+## extensions
+
+# use python site-packages
+# https://pypi.python.org/pypi/buildout.locallib/ 
+extensions = buildout.locallib
+
+parts = test
 
 [test]
 recipe = zc.recipe.testrunner
@@ -9,6 +21,4 @@ eggs = birdhousebuilder.recipe.docker [tests]
 defaults = ['--auto-color', '--auto-progress']
 
 [versions]
-zc.buildout = 1.7.1
-distribute = 0.6.28
-setuptools = 0.6c11
+zc.buildout= >=2.4.0
