udpate dockerfile template

--- a/birdhousebuilder/recipe/docker/Dockerfile
+++ b/birdhousebuilder/recipe/docker/Dockerfile
@@ -1,7 +1,13 @@
+# vim:set ft=dockerfile:
 FROM ${image_name}:${image_version}
 MAINTAINER ${maintainer}
 
 LABEL Description="${description}" Vendor="${vendor}" Version="${version}"
+
+# Configure hostname and user for services 
+ENV HOSTNAME localhost
+ENV USER www-data
+ENV OUTPUT_PORT ${output_port}
 
 % if image_name.lower() in ['centos', 'fedora']:
 # Setup sudo
@@ -30,18 +36,15 @@ ENV CONDA_ENVS_DIR /opt/conda/envs
 RUN make clean install 
 
 # Volume for data, cache, logfiles, ...
-RUN chown -R www-data $CONDA_ENVS_DIR/birdhouse
+RUN chown -R $USER $CONDA_ENVS_DIR/birdhouse
 RUN mv $CONDA_ENVS_DIR/birdhouse/var /data && ln -s /data $CONDA_ENVS_DIR/birdhouse/var
 VOLUME /data
 
-# Configure hostname and user for services 
-ENV HOSTNAME localhost
-
 # Ports used in birdhouse
-EXPOSE 8090 9001 ${http_port} ${https_port}
+EXPOSE $OUTPUT_PORT 9001 ${http_port} ${https_port}
 
 # Start supervisor in foreground
-ENV DAEMON_OPTS --nodaemon --user www-data
+ENV DAEMON_OPTS --nodaemon
 
 # Update config and start supervisor ...
 CMD ["make", "update-config", "start"]
