--- a/birdhousebuilder/recipe/docker/Dockerfile
+++ b/birdhousebuilder/recipe/docker/Dockerfile
@@ -8,6 +8,8 @@ LABEL Description="${description}" Vendor="${vendor}" Version="${version}"
 ENV HOSTNAME localhost
 ENV USER www-data
 ENV OUTPUT_PORT ${output_port}
+ENV PHOENIX_PASSWORD "sha256:10761810a2f2:8535bf8468e0045ec2d33bd4d2f513d669bd31b79794614f23632c3b2cadc51c"
+ENV WPS_URL http://malleefowl:8094/wps
 
 % if image_name.lower() in ['centos', 'fedora']:
 # Setup sudo
@@ -44,7 +46,7 @@ VOLUME /data
 EXPOSE $OUTPUT_PORT 9001 ${http_port} ${https_port}
 
 # Start supervisor in foreground
-ENV DAEMON_OPTS --nodaemon
+ENV DAEMON_OPTS --nodaemon --user $USER
 
 # Update config and start supervisor ...
 CMD ["make", "update-config", "start"]
