--- a/birdhousebuilder/recipe/docker/Dockerfile
+++ b/birdhousebuilder/recipe/docker/Dockerfile
@@ -40,7 +40,8 @@ RUN make clean install
 # Volume for data, cache, logfiles, ...
 RUN chown -R $USER $CONDA_ENVS_DIR/birdhouse
 RUN mv $CONDA_ENVS_DIR/birdhouse/var /data && ln -s /data $CONDA_ENVS_DIR/birdhouse/var
-VOLUME /data
+VOLUME /data/cache
+VOLUME /data/lib
 
 # Ports used in birdhouse
 EXPOSE $OUTPUT_PORT 9001 ${http_port} ${https_port}
