--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,24 +1,11 @@
 [buildout]
-develop = .
-
-# buildout options
-show-picked-versions = true
-newest = false
-download-cache = downloads
+extends = versions.cfg
 versions = versions
-
-## extensions
-
-# use python site-packages
-# https://pypi.python.org/pypi/buildout.locallib/ 
-extensions = buildout.locallib
-
+show-picked-versions = true
 parts = test
+
+develop = .
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = birdhousebuilder.recipe.docker [tests]
-defaults = ['--auto-color', '--auto-progress']
-
-[versions]
-zc.buildout= >=2.4.0
